# ws-serial-gateway

./: Cargo.toml  LICENSE  README.md  config.yaml
src/: main.rs
