# Cargo.toml
[package]
name = "ws-serial-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", features = ["handshake"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
serialport = "4.3"
anyhow = "1.0"
futures = "0.3"
